@@ -98,6 +98,8 @@ Unfortunately the module rlcompleter, the module that provides tab completion, i
 \section{Installation}
 There are a few things that are not autmatically installed. For instance the configuration file and the startup code that makes sure pyreadline is activated when running python in interactive mode.
 
+However when using ipython pyreadline is imported by default by ipython.
+
 \subsection{Development version}
 Use {\ttfamily easy\_install pyreadline==dev} to get development version. Copy pyreadlineconfig.ini from pyreadline/configuration to your HOME directory (usually c:/documents and settings/YOURNAME)
 
@@ -130,8 +132,33 @@ In your startup file (pointed to by environment variable PYTHONSTARTUP) add:
 
 This file is included in the doc directory of the distribution.
 
+\subsection{pyreadline with IronPython}
+Pyreadline can be used together with IronPython. Unfortunately the binary installs of IronPython can not run pyreadline directly. You need to patch the source code to make PythonCommandLine a public class that we can override. 
+
+\begin{itemize}
+  \item In PythonCommandLine.cs you need to change class PythonCommandLine to public class PythonCommandLine and recompile.
+  \item Copy rlcompleter.py from a standard python install to your ironpython path (this file is not included with fepy).
+\end{itemize}
+
+
 \subsection{pyreadline with IPython}
 In IPython pyreadline is automatically used if available.
+
+\subsection{Clipboard}
+Pyreadline can do copy/paste using the clipboard. Selections can be done using shift and arrowkeys as in most windows programs.
+
+There are three different paste functions that can be bound.
+
+\begin{itemize}
+  \item \emph{paste} Paste windows clipboard.
+        Assume single line strip other lines and end of line markers and trailing spaces
+  \item \emph{paste_mulitline_code} Paste windows clipboard as multiline code.
+        Removes any empty lines in the code 
+    \item \emph{ipython_paste} Paste windows clipboard. If enable_ipython_paste_list_of_lists is 
+        True then try to convert tabseparated data to repr of list of lists or 
+        repr of array. If enable_ipython_paste_for_paths==True then change \\\\ to / and spaces to \\space.
+\end{itemize}
+
 
 \subsection{International characters}
 The pyreadline package now supports international characters. However using international characters in the interactive prompt can be annoying on windows since the default codepage for the terminal is an ascii codepage (850 on swedish systems) but the filesystem often uses some other codepage (1252 on swedish systems). This means the filenames containing internationl characters entered on interactive prompt will not work. The workaround here is to change the codepage of your terminal to a more suitable one using the {\ttfamily chcp} command. For swedish systems {\ttfamily chcp 1252} does the trick but you also have to change the terminal font to ``lucida console'' using the properties dialog for the console.
